Random Forest ignorado para el despligue en la nube

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -127,7 +127,7 @@
                         <option value="LinearRegression">Linear Regression</option>
                         <option value="KNN">K-Nearest Neighbors</option>
                         <option value="DecisionTree">Decision Tree</option>
-                        <option value="RandomForest">Random Forest</option>
+                       <!--<option value="RandomForest">Random Forest</option>--> 
                     </select>
                 </div>
             </div>
