--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,8 +55,8 @@
                 </div>
 
                 <div class="col-md-6 mb-3">
-                    <label for="anio" class="form-label">Año:</label>
-                    <input type="number" class="form-control" id="anio" name="anio" min="2000" max="2012" step="1" placeholder="Ejemplo: 2012" required>
+                    <label for="anio" class="form-label">Año (2011-2013):</label>
+                    <input type="number" class="form-control" id="anio" name="anio" min="2011" max="2013" step="1" placeholder="Ejemplo: 2012" required>
                 </div>
 
                 <div class="col-md-6 mb-3">
